# slurm

./: configure  configure.ac
doc/man/man1/: srun.1
src/interfaces/: mpi.h
src/plugins/mpi/: Makefile.am
src/plugins/mpi/torchrun/: Makefile.am  Makefile.in  mpi_torchrun.c
